; ModuleID = '/home/carl/AnghaBench/git/trace2/extr_tr2_tls.c_tr2tls_region_elasped_self.c'
source_filename = "/home/carl/AnghaBench/git/trace2/extr_tr2_tls.c_tr2tls_region_elasped_self.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tr2tls_thread_ctx = type { i32, i64* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @tr2tls_region_elasped_self(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.tr2tls_thread_ctx*, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %6 = call %struct.tr2tls_thread_ctx* (...) @tr2tls_get_self()
  store %struct.tr2tls_thread_ctx* %6, %struct.tr2tls_thread_ctx** %4, align 8
  %7 = load %struct.tr2tls_thread_ctx*, %struct.tr2tls_thread_ctx** %4, align 8
  %8 = getelementptr inbounds %struct.tr2tls_thread_ctx, %struct.tr2tls_thread_ctx* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i64 0, i64* %2, align 8
  br label %26

12:                                               ; preds = %1
  %13 = load %struct.tr2tls_thread_ctx*, %struct.tr2tls_thread_ctx** %4, align 8
  %14 = getelementptr inbounds %struct.tr2tls_thread_ctx, %struct.tr2tls_thread_ctx* %13, i32 0, i32 1
  %15 = load i64*, i64** %14, align 8
  %16 = load %struct.tr2tls_thread_ctx*, %struct.tr2tls_thread_ctx** %4, align 8
  %17 = getelementptr inbounds %struct.tr2tls_thread_ctx, %struct.tr2tls_thread_ctx* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = sub nsw i32 %18, 1
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i64, i64* %15, i64 %20
  %22 = load i64, i64* %21, align 8
  store i64 %22, i64* %5, align 8
  %23 = load i64, i64* %3, align 8
  %24 = load i64, i64* %5, align 8
  %25 = sub nsw i64 %23, %24
  store i64 %25, i64* %2, align 8
  br label %26

26:                                               ; preds = %12, %11
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local %struct.tr2tls_thread_ctx* @tr2tls_get_self(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
